# no

./: .gitignore  readme.md
no/: Makefile  dune-project  no.opam  no.opam.locked
no/lib/: ast.ml  dune  lexer.mll  main.ml  parser.mly
nox/: .clangd  .ocamlformat  CMakeLists.txt  Makefile  build.zig  build.zig.zon  dune-project  go.mod  main.go
nox/analyse/: infer.go
nox/ast/: ast.go  dump.go  token.go  walk.go
nox/core/: ansi.go  args.go  base.go  file.go  string.go
nox/lib/: analyser.ml  ast.ml  cfg.ml  core.ml  cower.ml  dune  emit.ml  env.ml  error.ml  extLexer.mll  extParser.mly  file.ml  fmt.ml  get.ml  lexer.ml  lower.ml  lower.mx  main.ml  parser.ml  qbe.ml  token.ml
nox/nox/: ansi.go  args.go
nox/parser/: lexer.go  parser.go
nox/src/: base.c  base.h  config.zig  dbg.zig  kill.zig  lib.zig  main.c  main.zig  root.zig
nox/src/base/: lexer.zig  parser.zig  token.zig
nox/src/core/: args.zig  container.zig
nox/test/emit/qbe/: 001A.q  001C.q  001D.q
nox/test/grammar/: lexer.l  oh.no  parser.y
nox/test/grmr/: .clang-format  Makefile  lexer.l  main.c  oh.no  parser.y
nox/test/norm/step/: 000A.no  001A.no  001B.no  001C.no  001D.no
nox/test/wtf/: lib.no  main.no
nxn/: .ocamlformat  Makefile  dune-project  wtf.nxn
nxn/lib/: ast.ml  dune  env.ml  error.ml  getAst.ml  getEnv.ml  lexer.mll  main.ml  parser.mly  setAst.ml  utils.ml
nxn/test/norm/001-simple/001-return/pass/: 002A.nxn
nxn/test/norm/001-simple/002-variable/pass/: 001A.nxn  002A.nxn  003A.nxn
nxn/test/wth/: lib.nxn  main.nxn
test/emit/qbe/: 001B.q  Makefile  test.sh
test/grammar/: .clang-format  Makefile  lexer.l  main.c  parser.y
test/norm/001A/pass/: 001A.no  002A.no  002B.no
test/step/001A/pass/: 001B.no  001C.no  002C.no  002D.no
test/wtf/: lib.no  main.no
