(lang dune 3.20)

(name no)
(source (github oxcrow/no))
(authors "oxcrow<oxcrow@proton.me>")
(license RESTRICTED)

(using menhir 3.0)

(package
 (name no)
 (synopsis "No compiler.")
 (description "No: A language for workers of the world.")
 (tags ("compiler")))

; dune: https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
