(lang dune 3.20)

(name nxn)
(source (github oxcrow/nxn))
(authors "oxcrow<oxcrow@proton.me>")
(license RESTRICTED)

(using menhir 3.0)

(package
 (name nxn)
 (synopsis "NxN compiler.")
 (description "NxN: An elegant systems programming language.")
 (tags ("compiler")))

; dune: https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
