; Silence annoying warnings.
; + Use -21 to silence warnings for nonreturning methods
; + Use -26-27 to silence unused variable warnings
; + Use -33 to silenece unused opened module warnings
; + Use -A to silence all warnings

(env
 (dev
  (flags
   (:standard -w -21 -w -26-27 -w -33))))

(ocamllex
 (modules extLexer))

(menhir
 (modules extParser))

(library
 (name no)
 (libraries unix)
 (preprocess
  (pps ppx_deriving.show)))
